[gd_scene load_steps=21 format=2]

[ext_resource path="res://Objects/Enemy/Heavy/scrHeavy.gd" type="Script" id=1]
[ext_resource path="res://Sprites/UI/sprInteract.png" type="Texture" id=2]
[ext_resource path="res://Objects/Enemy/Heavy/sprHeavy.png" type="Texture" id=3]
[ext_resource path="res://Audio/SFX/Shoot/GunFIRE_MachineGun2.mp3" type="AudioStream" id=4]
[ext_resource path="res://Audio/SFX/Enemy/HORDA_1.mp3" type="AudioStream" id=5]
[ext_resource path="res://Audio/SFX/Gore_ExplodeBody_1.ogg" type="AudioStream" id=6]
[ext_resource path="res://Sprites/sprBlood.png" type="Texture" id=7]
[ext_resource path="res://Shaders/shrHitFlash.shader" type="Shader" id=8]
[ext_resource path="res://Audio/SFX/Player/Player_HIT.ogg" type="AudioStream" id=9]
[ext_resource path="res://Objects/Player/sprGunfire.png" type="Texture" id=10]

[sub_resource type="CapsuleShape2D" id=1]
radius = 64.0988
height = 86.8461

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 85.6552, 33.9828 )

[sub_resource type="ShaderMaterial" id=3]
shader = ExtResource( 8 )
shader_param/hit_color = Color( 1, 1, 1, 1 )
shader_param/hit_strength = 0.0

[sub_resource type="CanvasItemMaterial" id=4]
blend_mode = 1
light_mode = 1

[sub_resource type="Curve" id=5]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Animation" id=6]
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("sprAlert:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 0.4, 1 ),
"update": 0,
"values": [ Vector2( 0.2, 0.2 ), Vector2( 0.3, 0.3 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("sprAlert:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 1.2, 1.5 ),
"transitions": PoolRealArray( 0.4, 1, 0.4, 1 ),
"update": 0,
"values": [ Color( 1, 0, 0, 0 ), Color( 1, 0, 0, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 0, 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("sprAlert:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1.2, 1.5 ),
"transitions": PoolRealArray( 1, 0.4, 1 ),
"update": 0,
"values": [ Vector2( 0, -251.715 ), Vector2( 0, -251.715 ), Vector2( 0, -200 ) ]
}

[sub_resource type="Animation" id=7]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("sprAlert:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -251.715 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("sprAlert:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.3, 0.3 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("sprAlert:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=8]
length = 9.0
tracks/0/type = "value"
tracks/0/path = NodePath("EnemyBlood:emitting")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("pivot:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1.4, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 0.9 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("pivot:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1, 8.5, 9 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.705882, 0.286275, 0.286275, 1 ), Color( 0.705882, 0.286275, 0.286275, 1 ), Color( 0.705882, 0.286275, 0.286275, 0 ) ]
}

[sub_resource type="Animation" id=9]
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("pivot:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 0.95 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=10]
length = 4.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("EnemyBlood:emitting")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("pivot:scale")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2, 2.5, 3, 3.5, 4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 0.95 ), Vector2( 1, 1 ), Vector2( 1, 0.95 ), Vector2( 1, 1 ), Vector2( 1, 0.95 ), Vector2( 1, 1 ), Vector2( 1, 0.95 ), Vector2( 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("pivot:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("pivot/enemySprite:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Vector2( 0.305, 0.295 ), Vector2( -0.305, 0.295 ) ]
}

[node name="oHeavy" type="KinematicBody2D" groups=[
"Enemy",
]]
scale = Vector2( 1.2, 1.2 )
collision_layer = 4
collision_mask = 3
script = ExtResource( 1 )

[node name="enemyCol" type="CollisionShape2D" parent="."]
position = Vector2( -6, 20.6685 )
shape = SubResource( 1 )

[node name="enemyHitbox" type="Area2D" parent="." groups=[
"Enemy",
]]
collision_layer = 4
collision_mask = 3

[node name="enemyCol" type="CollisionShape2D" parent="enemyHitbox"]
position = Vector2( -103.042, 48.9528 )
shape = SubResource( 2 )

[node name="enemyHitbox2" type="Area2D" parent="." groups=[
"Enemy",
]]
collision_layer = 4
collision_mask = 3

[node name="enemyCol2" type="CollisionShape2D" parent="enemyHitbox2"]
position = Vector2( 103.042, 48.953 )
shape = SubResource( 2 )
disabled = true

[node name="EnemyBlood" type="CPUParticles2D" parent="."]
position = Vector2( 0, 97 )
amount = 320
lifetime = 5.2
speed_scale = 3.0
emission_shape = 2
emission_rect_extents = Vector2( 20, 1 )
direction = Vector2( 0, -1 )
initial_velocity = 225.0
damping = 25.0
scale_amount = 8.35
scale_amount_random = 0.63
color = Color( 0.886275, 0.168627, 0.168627, 0 )

[node name="deathBlood" type="Sprite" parent="."]
visible = false
position = Vector2( 91.9828, 0 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 7 )
hframes = 4

[node name="pivot" type="Node2D" parent="."]
position = Vector2( 0, 113.573 )

[node name="enemySprite" type="Sprite" parent="pivot"]
material = SubResource( 3 )
scale = Vector2( 0.305, 0.295 )
texture = ExtResource( 3 )
offset = Vector2( -168.429, -362.351 )
region_rect = Rect2( 454.709, -26.875, 1238.63, 1127.25 )
region_filter_clip = true

[node name="BulletPos" type="Position2D" parent="pivot/enemySprite"]
position = Vector2( -620.686, -244.35 )
scale = Vector2( -1, 1 )

[node name="bulletGunfire" type="Sprite" parent="pivot/enemySprite/BulletPos"]
visible = false
material = SubResource( 4 )
position = Vector2( 0.895004, 0 )
scale = Vector2( 1.2, 1.2 )
z_index = 1
texture = ExtResource( 10 )
offset = Vector2( 4.394, 2.175 )

[node name="sprAlert" type="Sprite" parent="."]
modulate = Color( 1, 0, 0, 0 )
position = Vector2( 0, -251.715 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 2 )
region_rect = Rect2( 105, 60, 55, 130 )

[node name="EnemySprint" type="CPUParticles2D" parent="."]
position = Vector2( -6, -78.6863 )
emitting = false
amount = 3
lifetime = 0.9
speed_scale = 3.0
direction = Vector2( 0.7, -1 )
initial_velocity = 112.74
damping = 25.0
scale_amount = 14.52
scale_amount_random = 0.63
scale_amount_curve = SubResource( 5 )

[node name="sfxNoticed" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
bus = "SFX"

[node name="sfxDie" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -8.0
bus = "SFX"

[node name="sfxShoot" type="AudioStreamPlayer2D" parent="."]
position = Vector2( -189.309, 48.9528 )
stream = ExtResource( 4 )
volume_db = 4.0
bus = "SFX"

[node name="sfxHit" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 9 )
bus = "SFX"

[node name="alertAnm" type="AnimationPlayer" parent="."]
autoplay = "anmIdle"
anims/anmAlert = SubResource( 6 )
anims/anmIdle = SubResource( 7 )

[node name="enemyAnm" type="AnimationPlayer" parent="."]
anims/anmDead = SubResource( 8 )
anims/anmHunting = SubResource( 9 )
anims/anmWaiting = SubResource( 10 )

[connection signal="animation_finished" from="enemyAnm" to="." method="_on_enemyAnm_animation_finished"]
